--- a/photos/events/proto/BUILD.bazel
+++ b/photos/events/proto/BUILD.bazel
@@ -2,22 +2,21 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
 proto_library(
-    name = "protos_proto",
-    srcs = ["protos.proto"],
+    name = "photos_proto",
+    srcs = ["photos.proto"],
     visibility = ["//visibility:public"],
 )
 
 go_proto_library(
-    name = "protos_go_proto",
-    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
-    importpath = "github.com/example/project/lib/scan/proto",
-    proto = ":protos_proto",
+    name = "photos_go_proto",
+    importpath = "github.com/graeme-hill/gnet/photos/events/proto",
+    proto = ":photos_proto",
     visibility = ["//visibility:public"],
 )
 
 go_library(
     name = "go_default_library",
-    embed = [":protos_go_proto"],
-    importpath = "github.com/example/project/lib/scan/proto",
+    embed = [":photos_go_proto"],
+    importpath = "github.com/graeme-hill/gnet/photos/events/proto",
     visibility = ["//visibility:public"],
 )
