--- a/sys/rpc-domainevents/BUILD.bazel
+++ b/sys/rpc-domainevents/BUILD.bazel
@@ -3,10 +3,12 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "github.com/example/project/svc/de",
+    importpath = "github.com/graeme-hill/gnet/sys/rpc-domainevents",
     visibility = ["//visibility:private"],
     deps = [
-        "//vendor/github.com/graeme-hill/gnet/svc/de/proto:go_default_library",
+        "//sys/eventstore:go_default_library",
+        "//sys/rpc-domainevents/proto:go_default_library",
+        "//vendor/github.com/pkg/errors:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
@@ -22,7 +24,8 @@ go_test(
     srcs = ["server_test.go"],
     embed = [":go_default_library"],
     deps = [
-        "//vendor/github.com/graeme-hill/gnet/svc/de/proto:go_default_library",
+        "//sys/eventstore:go_default_library",
+        "//sys/rpc-domainevents/proto:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
